@@ -208,10 +208,10 @@ DIST netbeans-xml-6.1_alpha20080106171826.tar.bz2 4614098 RMD160 12e446600a2b77a
 DIST netbeans-xml-6.1_alpha20080118072101.tar.bz2 4595774 RMD160 d70bd808298fa11ce30c5d77bd8a0690bbe566d4 SHA1 8111cd74f8fe9aa256b30ba064f1956bffd6f566 SHA256 b115bf2059308623e945e0e35beeb5dba93586bba505c34548cca15bf1d5b916
 DIST netbeans-xtest-6.1_alpha20080106171826.tar.bz2 1528227 RMD160 d47871987b72dc45794413a3658328c9c364795e SHA1 1e37147c5d5f45f13f8a6e4085a3fd816fa7baab SHA256 7e8d9bc499875a6f7af0d8172077da947184fad390a3b3ce9b76f8ff1a7a23e3
 DIST netbeans-xtest-6.1_alpha20080118072101.tar.bz2 1526613 RMD160 0ae8cf164a9f346d8eb6188f68240e657b05e7b2 SHA1 ca14463c1c47464a26cd9511946a09b3ff451984 SHA256 555412a9c6e83336127997e9b88420114bd2acf948be7cfbccf069e6dedf7201
-DIST sjp-1_0-fr-ri.zip 1959113 RMD160 b865c4ecc462f504b1dd14f8912c3bf27dc2d624 SHA1 eb8d4dbc31f14c8090515ebd75de0864b0b4b211 SHA256 d50de1314f723d607e4532fb01348779894f83e295e7be87f5ac421e819e5d15
+DIST tomcat-webserver-3.2.jar.bz2 376149 RMD160 ccae99ae5371daccebc77dda2a87b0c8329fe60e SHA1 fea39bed974247ed98b295cd6d60eaafc012d496 SHA256 0cb430151485aed38176dcea13022f1d1bf894520f025f55732c67db805f7983
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1_alpha20080106171826.ebuild 33855 RMD160 ae4eba462195986b97375e33c01cf5a7d5698856 SHA1 9a3da3f7ecf88a66ce861405e23fb30f7fa46907 SHA256 88dbde63e2f62824878f7821870c4ad4b8fed800b35a5998f6786034730ff747
 EBUILD netbeans-6.1_alpha20080118072101.ebuild 33718 RMD160 d0a7523c7f498aabbab5a9c470a6a0a303fdd2e6 SHA1 a8324798510414849047288ce7a59059e0764ad1 SHA256 a3641fa150d881f061933cc40657bd5ec824d9190dc8c435eb536d121f6d1226
-EBUILD netbeans-6.1_alpha20080127134700.ebuild 14012 RMD160 3a07fe4a73d0b70b514b4aefe203305b7da2c799 SHA1 7a40c9d1c38ab7f016f3bc4ec921875a10cbe488 SHA256 2bf5abd2eae1820ea3357cf4fd16460ba123e92ccfe150a4068e924e44b1a55e
-MISC ChangeLog 21119 RMD160 8ca697755f3e09f7303e61e53a6ffc505e5e4a5a SHA1 73167db08c9c74e232455288dc88a7b2b55f9581 SHA256 b862d49b80d3a2deecb9027383f19e07515917bbd2375f7fb0c493d0b9baf783
+EBUILD netbeans-6.1_alpha20080127134700.ebuild 15141 RMD160 3c757c0d449274999c2de6fcbf5345e2ead4e41c SHA1 68bc289f0b23f18021f0982d988066c074f3c745 SHA256 05c60158eb3a177a5f1a12232dee1b0d20154b7201209d553adb8b335a901223
+MISC ChangeLog 21337 RMD160 5351aeee786b276f2898b164763802802caedf34 SHA1 8722d8f0fe7c55477de5e2487d249f133db0468c SHA256 ec63c786608ffd71df6447fe9ef7ee1e4e15419f68df6f7d7787674792a329c2
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
